*Empty MediaWiki Message*

--- a/Espanyol_(amanu).mw
+++ b/Espanyol_(amanu).mw
@@ -1,19 +1,19 @@
-{{Infobox Language 
- |        name = Espanyol, Kastila
+{{Infobox language 
+ |        name = Espanyol, Kastila<br>''Español'', ''Castellano''
  | nativename = {{lang|es|Español}}, {{lang|es|Castellano}}
  |pronunciation=/espa'ɲol/, /kaste'ʎano/ or /kaste'ʝano/
  | familycolor = Indo-European
  |      script = [[Latin alphabet|Latin]] ([[Spanish alphabet|Spanish variant]])
 | region = [[Argentina]], [[Bolivia]], [[Chile]], [[Colombia]], [[Costa Rica]], [[Cuba]], [[Dominican Republic]], [[Ecuador]], [[Equatorial Guinea]], [[El Salvador]], [[Guatemala]], [[Honduras]], [[Mexico]],  [[Nicaragua]], [[Panama]], [[Paraguay]], [[Peru]], [[Puerto Rico]], [[Spain]], [[Uruguay]], [[Venezuela]] and significant parts of the population in [[Andorra]], [[Australia]], [[Belize]], [[Canada]], [[Gibraltar]], [[Morocco]], [[Philippines]], and the [[United States]].|speakers = First language<sup>a</sup>: 450<ref>[http://www.ethnologue.com/show_language.asp?code=spa Ethlogue-Spanish-language]</ref><ref>[http://encarta.msn.com/media_701500404/Languages_Spoken_by_More_Than_10_Million_People.html Encarta-Most Spoken languages]</ref>- c. 500 million<ref>[http://www.ciberamerica.org/Ciberamerica/Castellano/General/Noticias/detalle?id=8832 Ciberamerica-Castellano]</ref><ref>[http://archivo.elnuevodiario.com.ni/2004/febrero/15-febrero-2004/especiales/especiales2.html El Nuevo Diario]</ref><ref>[http://www.terra.com/noticias/articulo/html/act821930.htm Terra Noticias]</ref> <br />Total<sup>a</sup>: 550–600 million<ref name = "universidad de mexico">[http://archive.is/20121209175150/http://www.lllf.uam.es/~fmarcos/coloquio/Ponencias/MMelgar.doc Universidad de México]</ref><ref name="instituto cervantes">Instituto Cervantes ([http://archive.is/20120526072729/www.elmundo.es/elmundo/2007/04/26/cultura/1177610767.html "El Mundo" news])</ref><ref>[http://yhoo.client.shareholder.com/press/ReleaseDetail.cfm?ReleaseID=173481]</ref> <br /><sup>a</sup><small>All numbers are approximate.</small>
 | rank = 2-5 (native)<ref>[http://www.ethnologue.com/ Languages of the world by Ethnologue]</ref><ref>[http://www.nationsonline.org/oneworld/most_spoken_languages.htm Most widely spoken languges by Nations Online]</ref><ref>[http://www.askmen.com/toys/top_10/45b_top_10_list.html Most spoken languages by Ask Men]</ref><ref>[http://encarta.msn.com/media_701500404/Languages_Spoken_by_More_Than_10_Million_People.html Encarta Languages Spoken by More Than 10 Million People]</ref><br />Total: 4
- |        fam2 = [[Italic languages|Italic]]
- |        fam3 = [[Romance languages|Romance]]
- |        fam4 = [[Italo-Western languages|Italo-Western]]
- |        fam5 = [[Gallo-Iberian]]
- |        fam6 = [[Ibero-Romance languages|Ibero-Romance]]
- |        fam7 = [[West Iberian languages|West Iberian]]
- |      script = [[Latin alphabet|Latin]] ([[Spanish alphabet|Spanish variant]])
- |      script = [[Latin alphabet|Latin]] ([[Spanish alphabet|Spanish variant]])
+ |        fam1 = [[Deng amanung Indo-Europeu]]
+ |        fam2 = [[Deng amanung Italiku|Italiku]]
+ |        fam3 = [[Deng amanung Romansi|Romansi]]
+ |        fam4 = [[Deng amanung Albugang Italiku|Albugang Italiku]]
+ |        fam5 = [[Deng amanung Albugang Romansi|Albugang Romansi (Galyu-Iberiku)]]
+ |        fam6 = [[Deng amanung Iberu-Romansi|Iberu-Romansi]]
+ |        fam7 = [[Deng amanung Albugang Iberiku|Albugang Iberiku]]
+ |      script = [[Latin alphabet|Latin]] ([[Spanish alphabet|Baryanti Espanyol]])
  |      nation = {{flagicon|Argentina}} [[Argentina]]<br />{{flagicon|Bolivia}} [[Bolivia]]<br />{{flagicon|Chile}} [[Chile]]<br />{{flagicon|Colombia}} [[Colombia]]<br />{{flagicon|Costa Rica}} [[Costa Rica]]<br />{{flagicon|Cuba}} [[Cuba]]<br />{{flagicon|Dominican Republic}} [[Dominican Republic]]<br />{{flagicon|Ecuador}} [[Ecuador]]<br />{{flagicon|El Salvador}} [[El Salvador]]<br /> {{flagicon|Equatorial Guinea}} [[Equatorial Guinea]]<br />{{flagicon|Guatemala}} [[Guatemala]]<br />{{flagicon|Honduras}} [[Honduras]]<br />{{flagicon|Mexico}} [[Mexico]]<br />{{flagicon|Nicaragua}} [[Nicaragua]]<br />{{flagicon|Panama}} [[Panama]]<br />{{flagicon|Paraguay}} [[Paraguay]]<br />{{flagicon|Peru}} [[Peru]]<br />{{flagicon|Puerto Rico}} [[Puerto Rico]]<br />{{flagicon|Spain}} [[Spain]]<br />{{flagicon|Uruguay}} [[Uruguay]]<br />{{flagicon|Venezuela}} [[Venezuela]]<br /><br />{{flagicon|EU}} [[European Union]] (EU)<br />{{flagicon|Mercosur}} [[Mercosur]]<br />  [[Organization of American States]] <br />{{flagicon|UN}} [[United Nations]] (UN)<br />
  |      agency = [[Association of Spanish Language Academies|{{lang|es|Asociación de Academias de la Lengua Española}}]] ({{lang|es|[[Real Academia Española]]}} and 21 other national Spanish language academies)
  |        iso1 = es
