--- a/Espanyol_(amanu).mw
+++ b/Espanyol_(amanu).mw
@@ -14,7 +14,7 @@
  |        fam6 = [[Deng amanung Iberu-Romansi|Iberu-Romansi]]
  |        fam7 = [[Deng amanung Albugang Iberiku|Albugang Iberiku]]
  |      script = [[Latin alphabet|Latin]] ([[Spanish alphabet|Baryanti Espanyol]])
- |      nation = {{flagicon|Argentina}} [[Argentina]]<br />{{flagicon|Bolivia}} [[Bolivia]]<br />{{flagicon|Chile}} [[Chile]]<br />{{flagicon|Colombia}} [[Colombia]]<br />{{flagicon|Costa Rica}} [[Costa Rica]]<br />{{flagicon|Cuba}} [[Cuba]]<br />{{flagicon|Dominican Republic}} [[Dominican Republic]]<br />{{flagicon|Ecuador}} [[Ecuador]]<br />{{flagicon|El Salvador}} [[El Salvador]]<br /> {{flagicon|Equatorial Guinea}} [[Equatorial Guinea]]<br />{{flagicon|Guatemala}} [[Guatemala]]<br />{{flagicon|Honduras}} [[Honduras]]<br />{{flagicon|Mexico}} [[Mexico]]<br />{{flagicon|Nicaragua}} [[Nicaragua]]<br />{{flagicon|Panama}} [[Panama]]<br />{{flagicon|Paraguay}} [[Paraguay]]<br />{{flagicon|Peru}} [[Peru]]<br />{{flagicon|Puerto Rico}} [[Puerto Rico]]<br />{{flagicon|Spain}} [[Spain]]<br />{{flagicon|Uruguay}} [[Uruguay]]<br />{{flagicon|Venezuela}} [[Venezuela]]<br /><br />{{flagicon|EU}} [[European Union]] (EU)<br />{{flagicon|Mercosur}} [[Mercosur]]<br />  [[Organization of American States]] <br />{{flagicon|UN}} [[United Nations]] (UN)<br />
+ |      nation = {{flagicon|Argentina}} [[Argentina]]<br />{{flagicon|Bolivia}} [[Bolivia]]<br />{{flagicon|Chile}} [[Chile]]<br />{{flagicon|Colombia}} [[Colombia]]<br />{{flagicon|Costa Rica}} [[Costa Rica]]<br />{{flagicon|Cuba}} [[Cuba]]<br />{{flagicon|Dominican Republic}} [[Dominican Republic]]<br />{{flagicon|Ecuador}} [[Ecuador]]<br />{{flagicon|El Salvador}} [[El Salvador]]<br /> {{flagicon|Equatorial Guinea}} [[Equatorial Guinea]]<br />{{flagicon|Guatemala}} [[Guatemala]]<br />{{flagicon|Honduras}} [[Honduras]]<br />{{flagicon|Mexico}} [[Mexico]]<br />{{flagicon|Nicaragua}} [[Nicaragua]]<br />{{flagicon|Panama}} [[Panama]]<br />{{flagicon|Paraguay}} [[Paraguay]]<br />{{flagicon|Peru}} [[Peru]]<br />{{flagicon|Puerto Rico}} [[Puerto Rico]]<br />{{flagicon|Spain}} [[Spain]]<br />{{flagicon|Uruguay}} [[Uruguay]]<br />{{flagicon|Venezuela}} [[Venezuela]]<br /><br />{{flagicon|European Union}} [[European Union]] (EU)<br />{{flagicon|Mercosur}} [[Mercosur]]<br />  [[Organization of American States]] <br />{{flagicon|UN}} [[United Nations]] (UN)<br />
  |      agency = [[Association of Spanish Language Academies|{{lang|es|Asociación de Academias de la Lengua Española}}]] ({{lang|es|[[Real Academia Española]]}} and 21 other national Spanish language academies)
  |        iso1 = es
  |        iso2 = spa
@@ -38,6 +38,9 @@ Ing Catalan, metung a amanung [[w:Iberian Romance languages|Aslagang Iberian]] (
 
 Ing Ladino naman, a keraklan ing Castila ketang panaun a medieval (Edad Media, Middle Ages o Kalibudtang Panaun), at mas malapit king makabayung Castila o Español kesa king sanu pa mang amanu, gagamitan de reng lahi da reng Judiung Sephardic, a mitabi king España ketang kalabing limang siglu o dilanwa (15th century). Agpang karing dakal nang kauryan, e ya aliwang amanu nun e metung ya mung dialectu ning Castila. Ala lu king Ladino deng katayang ibat kareng tubu king America (Indian o native American) a mikalat ketang panaun ning colonialismu. Atin yang kataya ibat king Turco, Hebreo at aliwa pang amanu da reng lugal nung nu la menuknangan deng Sephardi.
 
+
+==Dalerayan==
+{{reflist}}
 
 {{Official UN languages}}
 {{Official EU languages}}
