*Empty MediaWiki Message*

--- a/Espanyol_(amanu).mw
+++ b/Espanyol_(amanu).mw
@@ -14,7 +14,7 @@
  |        fam6 = [[Deng amanung Iberu-Romansi|Iberu-Romansi]]
  |        fam7 = [[Deng amanung Albugang Iberiku|Albugang Iberiku]]
  |      script = [[Latin alphabet|Latin]] ([[Spanish alphabet|Baryanti Espanyol]])
- |      nation = {{flagicon|Argentina}} [[Argentina]]<br />{{flagicon|Bolivia}} [[Bolivia]]<br />{{flagicon|Chile}} [[Chile]]<br />{{flagicon|Colombia}} [[Colombia]]<br />{{flagicon|Costa Rica}} [[Costa Rica]]<br />{{flagicon|Cuba}} [[Cuba]]<br />{{flagicon|Dominican Republic}} [[Dominican Republic]]<br />{{flagicon|Ecuador}} [[Ecuador]]<br />{{flagicon|El Salvador}} [[El Salvador]]<br /> {{flagicon|Equatorial Guinea}} [[Equatorial Guinea]]<br />{{flagicon|Guatemala}} [[Guatemala]]<br />{{flagicon|Honduras}} [[Honduras]]<br />{{flagicon|Mexico}} [[Mexico]]<br />{{flagicon|Nicaragua}} [[Nicaragua]]<br />{{flagicon|Panama}} [[Panama]]<br />{{flagicon|Paraguay}} [[Paraguay]]<br />{{flagicon|Peru}} [[Peru]]<br />{{flagicon|Puerto Rico}} [[Puerto Rico]]<br />{{flagicon|Spain}} [[Spain]]<br />{{flagicon|Uruguay}} [[Uruguay]]<br />{{flagicon|Venezuela}} [[Venezuela]]<br /><br />{{flagicon|European Union}} [[European Union]] (EU)<br />{{flagicon|Mercosur}} [[Mercosur]]<br />  [[Organization of American States]] <br />{{flagicon|UN}} [[United Nations]] (UN)<br />
+ |      nation = {{flagicon|Argentina}} [[Argentina]]<br />{{flagicon|Bolivia}} [[Bolivia]]<br />{{flagicon|Chile}} [[Chile]]<br />{{flagicon|Colombia}} [[Colombia]]<br />{{flagicon|Costa Rica}} [[Costa Rica]]<br />{{flagicon|Cuba}} [[Cuba]]<br />{{flagicon|Dominican Republic}} [[Dominican Republic]]<br />{{flagicon|Ecuador}} [[Ecuador]]<br />{{flagicon|El Salvador}} [[El Salvador]]<br /> {{flagicon|Equatorial Guinea}} [[Equatorial Guinea]]<br />{{flagicon|Guatemala}} [[Guatemala]]<br />{{flagicon|Honduras}} [[Honduras]]<br />{{flagicon|Mexico}} [[Mexico]]<br />{{flagicon|Nicaragua}} [[Nicaragua]]<br />{{flagicon|Panama}} [[Panama]]<br />{{flagicon|Paraguay}} [[Paraguay]]<br />{{flagicon|Peru}} [[Peru]]<br />{{flagicon|Puerto Rico}} [[Puerto Rico]]<br />{{flagicon|Spain}} [[Spain]]<br />{{flagicon|Uruguay}} [[Uruguay]]<br />{{flagicon|Venezuela}} [[Venezuela]]<br /><br />{{flagicon|European Union}} [[European Union]] (EU)<br />{{flagicon|Mercosur}} [[Mercosur]]<br />  [[Organization of American States]] <br />{{flagicon|United Nations}} [[United Nations]] (UN)<br />
  |      agency = [[Association of Spanish Language Academies|{{lang|es|Asociación de Academias de la Lengua Española}}]] ({{lang|es|[[Real Academia Española]]}} and 21 other national Spanish language academies)
  |        iso1 = es
  |        iso2 = spa
