--- a/Espanyol_(amanu).mw
+++ b/Espanyol_(amanu).mw
@@ -4,8 +4,8 @@
  |pronunciation=/espa'ɲol/, /kaste'ʎano/ or /kaste'ʝano/
  | familycolor = Indo-European
  |      script = [[Latin alphabet|Latin]] ([[Spanish alphabet|Spanish variant]])
-| region = [[Argentina]], [[Bolivia]], [[Chile]], [[Colombia]], [[Costa Rica]], [[Cuba]], [[Dominican Republic]], [[Ecuador]], [[Equatorial Guinea]], [[El Salvador]], [[Guatemala]], [[Honduras]], [[Mexico]],  [[Nicaragua]], [[Panama]], [[Paraguay]], [[Peru]], [[Puerto Rico]], [[Spain]], [[Uruguay]], [[Venezuela]] and significant parts of the population in [[Andorra]], [[Australia]], [[Belize]], [[Canada]], [[Gibraltar]], [[Morocco]], [[Philippines]], and the [[United States]].|speakers = First language<sup>a</sup>: 450<ref>[http://www.ethnologue.com/show_language.asp?code=spa Ethlogue-Spanish-language]</ref><ref>[http://encarta.msn.com/media_701500404/Languages_Spoken_by_More_Than_10_Million_People.html Encarta-Most Spoken languages]</ref>- c. 500 million<ref>[http://www.ciberamerica.org/Ciberamerica/Castellano/General/Noticias/detalle?id=8832 Ciberamerica-Castellano]</ref><ref>[http://archivo.elnuevodiario.com.ni/2004/febrero/15-febrero-2004/especiales/especiales2.html El Nuevo Diario]</ref><ref>[http://www.terra.com/noticias/articulo/html/act821930.htm Terra Noticias]</ref> <br />Total<sup>a</sup>: 550–600 million<ref name = "universidad de mexico">[http://archive.is/20121209175150/http://www.lllf.uam.es/~fmarcos/coloquio/Ponencias/MMelgar.doc Universidad de México]</ref><ref name="instituto cervantes">Instituto Cervantes ([http://archive.is/20120526072729/www.elmundo.es/elmundo/2007/04/26/cultura/1177610767.html "El Mundo" news])</ref><ref>[http://yhoo.client.shareholder.com/press/ReleaseDetail.cfm?ReleaseID=173481]</ref> <br /><sup>a</sup><small>All numbers are approximate.</small>
-| rank = 2-5 (native)<ref>[http://www.ethnologue.com/ Languages of the world by Ethnologue]</ref><ref>[http://www.nationsonline.org/oneworld/most_spoken_languages.htm Most widely spoken languges by Nations Online]</ref><ref>[http://www.askmen.com/toys/top_10/45b_top_10_list.html Most spoken languages by Ask Men]</ref><ref>[http://encarta.msn.com/media_701500404/Languages_Spoken_by_More_Than_10_Million_People.html Encarta Languages Spoken by More Than 10 Million People]</ref><br />Total: 4
+| region = [[Argentina|Arentina]], [[Bolivia|Bolibya]], [[Chile|Tsili]], [[Colombia|Kolombya]], [[Costa Rica]], [[Cuba|Kuba]], [[Dominican Republic|Republika Dominikana]], [[Ecuador|Ekwador]], [[Equatorial Guinea]], [[El Salvador]], [[Guatemala]], [[Honduras]], [[Mexico|Meyiku]],  [[Nicaragua|Nikaragwa]], [[Panama]], [[Paraguay|Paragway]], [[Peru]], [[Puerto Rico]], [[Spain|Espanya]], [[Uruguay]], [[Venezuela|Beneswela]] and significant parts of the population in [[Andorra]], [[Australia|Awstralya]], [[Belize|Belisi]], [[Canada]], [[Gibraltar]], [[Morocco|Marwekus]], [[Philippines|Pilipinas]], at [[United States|Estadus Unidus]].|speakers = Minunang Amanu<sup>a</sup>: 450<ref>[http://www.ethnologue.com/show_language.asp?code=spa Ethlogue-Spanish-language]</ref><ref>[http://encarta.msn.com/media_701500404/Languages_Spoken_by_More_Than_10_Million_People.html Encarta-Most Spoken languages]</ref>- c. 500 million<ref>[http://www.ciberamerica.org/Ciberamerica/Castellano/General/Noticias/detalle?id=8832 Ciberamerica-Castellano]</ref><ref>[http://archivo.elnuevodiario.com.ni/2004/febrero/15-febrero-2004/especiales/especiales2.html El Nuevo Diario]</ref><ref>[http://www.terra.com/noticias/articulo/html/act821930.htm Terra Noticias]</ref> <br />Total<sup>a</sup>: 550–600 million<ref name = "universidad de mexico">[http://archive.is/20121209175150/http://www.lllf.uam.es/~fmarcos/coloquio/Ponencias/MMelgar.doc Universidad de México]</ref><ref name="instituto cervantes">Instituto Cervantes ([http://archive.is/20120526072729/www.elmundo.es/elmundo/2007/04/26/cultura/1177610767.html "El Mundo" news])</ref><ref>[http://yhoo.client.shareholder.com/press/ReleaseDetail.cfm?ReleaseID=173481]</ref> <br /><sup>a</sup><small>All numbers are approximate.</small>
+| rank = 2-5 (tubu)<ref>[http://www.ethnologue.com/ Languages of the world by Ethnologue]</ref><ref>[http://www.nationsonline.org/oneworld/most_spoken_languages.htm Most widely spoken languges by Nations Online]</ref><ref>[http://www.askmen.com/toys/top_10/45b_top_10_list.html Most spoken languages by Ask Men]</ref><ref>[http://encarta.msn.com/media_701500404/Languages_Spoken_by_More_Than_10_Million_People.html Encarta Languages Spoken by More Than 10 Million People]</ref><br />Total: 4
  |        fam1 = [[Deng amanung Indo-Europeu]]
  |        fam2 = [[Deng amanung Italiku|Italiku]]
  |        fam3 = [[Deng amanung Romansi|Romansi]]
@@ -22,21 +22,21 @@
  |        map = <center><small>For detailed information about the legend and the sources taken to make the map, [http://commons.wikimedia.org/wiki/Image:Map-Hispanophone_World.png#Sources_for_the_legend see its description page]</center></small> 
 }}
 
-Ing '''Castila''' o '''Español''' metung yang [[Romance languages|amanung Romance]] a menibat king dake nang pangulu ning [[Spain|España]]. Iti ing opisial a amanu ning España ampo ning keraklan da reng bansa king [[w:Latin America|America Latina]], amo ning [[Equatorial Guinea]] king [[Africa]]. Miras lang adwang pulu’t limang bansa ampong teritoriu deng gagamit king Castila antimong manimunang amanu. Bukud kaniti, maulaga yang amanu kareng dakal pang lugal. 
+Ing '''Espanyol''' o '''Kastila''' (''Castila''', '''Español''), metung yang [[Deng amanung Romansi|amanung Romansi]] a menibat king dake nang pangulu ning [[Spain|Espanya]]. Iti ing opisyal a yamanu ning Espanya ampo ning keraklan da reng bansa king [[w:Latin America|Amerika Latina]], amo ning [[Equatorial Guinea]] king [[Africa|Aprika]]. Miras lang adwang pulu’t limang bansa ampong teritoryu deng gagamit king Kastila antimong manimunang amanu. Bukud kaniti, maulaga yang amanu kareng dakal pang lugal. 
 
-Migumpisa ya ing Castila antimong dialectu ning [[Latin]] kareng mangalaut a salapungan kareng lalawigan ning [[Cantabria]], [[Burgos]], [[Soria]] and [[w:La Rioja (autonomous community)|La Rioja]] king pangulu ning España. Manibat karin, bagya-bagya yang mikalat kilub ning Kayaryan ning [[Kayaryan ning Castilia|Castilia]], nung nu ya miyalkus (evolved) at king lambatan, meging manimunang amanu ning kapamahalan ampo ning kalakal. Midala ya king [[w:Americas|America]] at aliwa pang dake ning yatu karing tawling limang siglu (dilanwa) kapamilatan da reng colonista ampong talapaglakbeng Español. 
+Migumpisa ya ing Kastila antimong diyalektu ning [[Latin]] kareng mangalawut a salapungan kareng lalawigan ning [[Cantabria|Kantabriya]], [[Burgos]], [[Soria]] and [[w:La Rioja (autonomous community)|La Rioja]] king pangulu ning Espanya. Manibat karin, bagya-bagya yang mikalat kilub ning Kayariyan ning [[Kayaryan ning Castilia|Kastilya]] (''Castilia'', ''Castille''), nung nu ya miyalkus (evolved) at king lambatan, meging manimunang amanu ning kapamahalan ampo ning kalakal. Midala ya king [[w:Americas|America]] at aliwa pang dake ning yatu karing tauling limang siglu (dilanwa) kapamilatan da reng kolonista ampong talapaglakbeng Espanyol. 
 
-Miraras lang atlung dalan a milyun adwang pulu’t adwang miliun (400,000,000) anggang apat a ralan a milyun deng magsalitang king amanung iti.<ref name = "universidad de Mexico">[http://archive.is/20121209175150/http://www.lllf.uam.es/~fmarcos/coloquio/Ponencias/MMelgar.doc Universidad de México]</ref><ref name="instituto cervantes">Instituto Cervantes ([http://archive.is/20120526072729/www.elmundo.es/elmundo/2007/04/26/cultura/1177610767.html "El Mundo" news])</ref>. Uli na niti, iti ing maragul diling amanung Romance, at mapalyaring ing kadwang pekamaragul a yamanu agpang king bilang da reng tubung magsalita. Ing tantya ra, nung piyabe la reng tubu ampong e tubung magsalita, miras lang limang dalan a miliun deti. Uli na niti, mapalyaring ing Castila ing kapat a pekamaragul a yamanu agpang king pangkabilugan a bilang da reng talapagsalita.<ref name = "universidad de Mexico">[http://archive.is/20121209175150/http://www.lllf.uam.es/~fmarcos/coloquio/Ponencias/MMelgar.doc Universidad de México]</ref><ref name="instituto cervantes">Instituto Cervantes ([http://archive.is/20120526072729/www.elmundo.es/elmundo/2007/04/26/cultura/1177610767.html "El Mundo" news]).</ref>
+Miraras lang atlung dalan a milyun adwang pulu’t adwang miliun (400,000,000) anggang apat a ralan a milyun deng magsalitang king amanung iti.<ref name = "universidad de Mexico">[http://archive.is/20121209175150/http://www.lllf.uam.es/~fmarcos/coloquio/Ponencias/MMelgar.doc Universidad de México]</ref><ref name="instituto cervantes">Instituto Cervantes ([http://archive.is/20120526072729/www.elmundo.es/elmundo/2007/04/26/cultura/1177610767.html "El Mundo" news])</ref>. Uli na niti, iti ing maragul diling amanung Romansi, at mapalyaring ing kadwang pekamaragul a yamanu agpang king bilang da reng tubung mangamanu. Ing tantya ra, nung piyabe la reng tubu ampong e tubung magsalita, miras lang limang dalang milyun deti. Uli na niti, mapalyaring ing Espanyol ing kapat a pekamaragul a yamanu agpang king pangkabilugan a bilang da reng talasalita.<ref name = "universidad de Mexico">[http://archive.is/20121209175150/http://www.lllf.uam.es/~fmarcos/coloquio/Ponencias/MMelgar.doc Universidad de México]</ref><ref name="instituto cervantes">Instituto Cervantes ([http://archive.is/20120526072729/www.elmundo.es/elmundo/2007/04/26/cultura/1177610767.html "El Mundo" news]).</ref>
 
-Metung ya kareng [[w:United Nations#Languages|anam a oficial a amanu king pamipalakad]] ning [[Misasanmetung a Bansa]] o United Nations. Dakal lang dili reng magsalita kaniti king [[Pangulung America]], [[Mawling America]], [[España]], at king mas malating bilang king [[Africa]] ampong [[w:Asia Pacific|Asia Pacifico]]. Ing Castila murin ing kadwang pekamaragul a yamanu king 
+Metung ya kareng [[w:United Nations#Languages|anam a opisyal a amanu king pamipalakad]] ning [[Misasanmetung a Bansa]] (''United Nations''). Dakal lang dili reng magsalita kaniti king [[Pangulung America]], [[Mauling America]], [[Espanya]], at king mas malating bilang king [[Africa|Aprika]] ampong [[w:Asia Pacific|Asya-Pasipiku]]. Ing Espanyol murin ing kadwang pekamaragul a yamanu king 
 [[w:United States|America]]<ref>[https://www.cia.gov/cia/publications/factbook/geos/us.html CIA The World Factbook United States]</ref>, nung nu iti murin ing popular diling dayung amanu (foreign language) a panigaralan da kareng pipagaralan ampong universidad <ref>{{PDFlink|[http://www.census.gov/prod/2005pubs/06statab/pop.pdf United States Census Bureau]|1.86&nbsp;[[Mebibyte|MiB]]<!-- application/pdf, 1956553 bytes -->}}, Statistical Abstract of the United States: page 47: Table 47: Languages Spoken at Home by Language: 2003</ref><ref>{{PDFlink|[http://www.adfl.org/resources/enrollments.pdf Foreign Language Enrollments in United States Institutions of Higher Learning]|129&nbsp;[[Kibibyte|KiB]]<!-- application/pdf, 132628 bytes -->}}, MLA Fall 2002.</ref>
 
 == Pamitinduk-tinduk (Classification) ==
-Malapit yang dili ing Castila kareng aliwang amanung Romance a [[w:West Iberian languages|Albugang Iberian]]: [[Asturian language|Asturian]] ({{lang|ast|''asturianu''}}), [[Galician language|Galician]] ({{lang|gl|''galego''}}), [[Ladino language|Ladino]] ({{lang|lad|''Djudeo-espanyol''}}, {{lang|lad|''sefardí''}}), and [[Portuguese language|Portuguese]] ({{lang|pt|''português''}}), at, kareng mapilang aspetu, king [[Aragonese language|Aragonese]] ({{lang|an|''aragonés''}}) ampong [[Catalan language|Catalan]] ({{lang|ca|''català''}}).
+Malapit yang dili ing Kastila kareng aliwang amanung Romance a [[w:West Iberian languages|Albugang Iberiku]]: [[Asturian language|Asturyanu]] ({{lang|ast|''asturianu''}}), [[Galician language|Galyegu]] ({{lang|gl|''galego''}}), [[Ladino language|Ladinu]] ({{lang|lad|''Djudeo-espanyol''}}, {{lang|lad|''sefardí''}}), and [[Portuguese language|Portuges]] ({{lang|pt|''português''}}), at, kareng mapilang aspetu, king [[Aragonese language|Aragones]] ({{lang|an|''aragonés''}}) ampong [[Catalan language|Katalan]] ({{lang|ca|''català''}}).
 
-Ing Catalan, metung a amanung [[w:Iberian Romance languages|Aslagang Iberian]] (East Iberian), mas malapit ya ketang kasiping nang amanung [[w:Occitan language|Occitan]] ({{lang|oc|''occitan''}}) kesa king pamikamaganak da reng Castila (Español) ampong Portugues. Miwawangis la garalita (gramatica) deng Castila ampong Portugues, pati na ing keraklan da reng karelang amanu o vocabulariu, at metung a kasalesayan, particular king impluensiya ning Arabu, anyang sinakup deng Muslim ing keraklan ning peninsula (pareu lang melaganap kareng teritoriung Muslim deng adwa). Tatantyan dang 89% ing karelang pamiyawig. <ref name="ethnologue"/>
+Ing Katalan, metung a amanung [[w:Iberian Romance languages|Aslagang Iberiku]] (''East Iberian''), mas malapit ya ketang kasiping nang amanung [[w:Occitan language|Oksitanu]] ({{lang|oc|''occitan''}}) kesa king pamikamaganak da reng Kastila (Espanyol) ampong Portuges. Miwawangis la garalita (gramatica) deng Kastila ampong Portuges, pati na ing keraklan da reng karelang amanu o bokabularyu, at metung a kasalesayan, particular king impluensiya ning Arabu, anyang sinakup deng Muslim ing keraklan ning peninsula (pareu lang melaganap kareng teritoriung Muslim deng adwa). Tatantyan dang 89% ing karelang pamiyawig. <ref name="ethnologue"/>
 
-Ing Ladino naman, a keraklan ing Castila ketang panaun a medieval (Edad Media, Middle Ages o Kalibudtang Panaun), at mas malapit king makabayung Castila o Español kesa king sanu pa mang amanu, gagamitan de reng lahi da reng Judiung Sephardic, a mitabi king España ketang kalabing limang siglu o dilanwa (15th century). Agpang karing dakal nang kauryan, e ya aliwang amanu nun e metung ya mung dialectu ning Castila. Ala lu king Ladino deng katayang ibat kareng tubu king America (Indian o native American) a mikalat ketang panaun ning colonialismu. Atin yang kataya ibat king Turco, Hebreo at aliwa pang amanu da reng lugal nung nu la menuknangan deng Sephardi.
+Ing Ladino naman, a keraklan ing Castila ketang panaun a medieval (Edad Media, Middle Ages o Kalibudtang Panaun), at mas malapit king makabayung Kastila o Espanyol kesa king sanu pa mang amanu, gagamitan de reng lahi da reng Judiung Sephardic, a mitabi king Espanya ketang kalabing limang siglu o dilanwa (15th century). Agpang karing dakal nang katindukan, e ya aliwang amanu nun e metung ya mung diyalektu ning Kastila. Ala lu king Ladino deng katayang ibat kareng tubu king Amerika (Indian o native American) a mikalat ketang panaun ning kolonyalismu. Atin yang kataya ibat king Turku, Ebreu at aliwa pang amanu da reng lugal nung nu la menuknangan deng Sephardi.
 
 
 ==Dalerayan==
