--- a/Garalita.mw
+++ b/Garalita.mw
@@ -1,4 +1,7 @@
-[[ GARALITANG KAPAMPANGAN ]] Yapin ini ing Grammar keng Inglis at Balarila keng Tagalug. Agpang kang Evangelina Hilario Lacson, Ph.D., misulat king Aklat "Magaral Tang Kapampangan" king keyang Panagano: "...Pakatingiran mu sana ing babasan mu kening aklat ku, at kaybat manintun kang panaun irake mu iti karing aliwang kamaganak at kakaluguran mu. Sana arinan mung ulaga ing katutwan ayni: king ing aklat ayni a atyu king gamat mu, ya ing mumunang diling bunga ring mitipuntipun dang taimtim a kapagnasan ding mitukituking daying pantas.
+King [[Pamagaral Amanu]] (''linggwistika''), ing '''garalita''' ya pin ing ''set'' da reng ''structural rules'' a manibala kareng komposisyon da reng [[Sugne (pamagaral amanu)|sugne]] (''clauses''), [[prasi]] (''phrase'') at [[salita]] king agyang sanu pang pamyalita. Iya pin ing '''Grammar''' king [[Amanung Ingles|Inglis]] at '''Balarila''' king [[Amanung Tagalug|Tagalug]].
+
+==Maki-mayigit pa==
+Agpang kang Evangelina Hilario Lacson, Ph.D., misulat king Aklat "Magaral Tang Kapampangan" king keyang Panagano: "...Pakatingiran mu sana ing babasan mu kening aklat ku, at kaybat manintun kang panaun irake mu iti karing aliwang kamaganak at kakaluguran mu. Sana arinan mung ulaga ing katutwan ayni: king ing aklat ayni a atyu king gamat mu, ya ing mumunang diling bunga ring mitipuntipun dang taimtim a kapagnasan ding mitukituking daying pantas.
 
 Wa, ngeni ing bunga na ning tagimpan da ring nunu tamu miras ne keka. Iti malyari mu neng pamana karing supling mu ban pagaralan de, palabungan de at ikalat king yatu - at kanita milako na kekatamu ing takut pota kabud nya lumbug ing salitang Kapampangan keti king yatu.
 
