*Empty MediaWiki Message*

--- a/Garalita.mw
+++ b/Garalita.mw
@@ -1,4 +1,4 @@
-King [[Pamagaral Amanu]] (''linggwistika''), ing '''garalita''' ya pin ing ''set'' da reng ''structural rules'' a manibala kareng komposisyon da reng [[Sugne (pamagaral amanu)|sugne]] (''clauses''), [[prasi]] (''phrase'') at [[salita]] king agyang sanu pang pamyalita. Iya pin ing '''Grammar''' king [[Amanung Ingles|Inglis]] at '''Balarila''' king [[Amanung Tagalug|Tagalug]].
+King [[Pamagaral Amanu]] (''linggwistika''), ing '''garalita''' ya pin ing ''set'' da reng ''structural rules'' a manibala kareng komposisyon da reng [[Sugne (pamagaral amanu)|sugne]] (''clauses''), [[prasi]] (''phrase'') at [[salita]] king agyang sanu pang pamyalita. Iya pin ing '''Grammar''' king [[Amanung Ingles|Inglis]], '''Gramática''' king [[Espanyol (amanu)|Espanyol]] at '''Balarila''' king [[Amanung Tagalug|Tagalug]].
 
 ==Maki-mayigit pa==
 Agpang kang Evangelina Hilario Lacson, Ph.D., misulat king Aklat "Magaral Tang Kapampangan" king keyang Panagano: "...Pakatingiran mu sana ing babasan mu kening aklat ku, at kaybat manintun kang panaun irake mu iti karing aliwang kamaganak at kakaluguran mu. Sana arinan mung ulaga ing katutwan ayni: king ing aklat ayni a atyu king gamat mu, ya ing mumunang diling bunga ring mitipuntipun dang taimtim a kapagnasan ding mitukituking daying pantas.
@@ -12,3 +12,7 @@ Simbitla nalang Doktor Lacson ding mengatangkang aklat garalita king Kapampangan
 Di Doktora Anicia del Corro, Doktor Jeremias Calagui, adwa la karing asabi nang misulat pamipagaral keng Kapampangan syntax.
 
 Melino kening Aklat Garalita nang Doktor Lacson a ding titik ning abakadang mirinan titik Romano, karing anas la makatulid. Kalupa ning sinabi nang Amado Benjamin Yuzon, anak na ning metung pang menatagan king Akademyang Kapampangan a pengutnan ku, ing Amanu tang misulat kanita simpli ya mu. Mayayakit pin ini karing dakal nang mengagulis a pamaglikas ding Anas Kapampangan king abakadang Romanu. Keng Bilungan bilang 2, ning aklat "Magaral Tang Kapampangan" mayakit la reni.
+
+{{Suli}}
+
+[[Category:Amanu]]
