*Empty MediaWiki Message*

--- a/Wikipedia:Embahada.mw
+++ b/Wikipedia:Embahada.mw
@@ -15,8 +15,13 @@ Ini ing talaan da reng aktibong embahador king Kapampangan Wikipedia. Nung bisa 
 
 This is a list of ambassadors who are active on Kapampangan Wikipedia. If you would like to offer some help, please feel free to add your name and the languages you speak to the list.
 
-=== Who can help me?  (English) ===
+=== <span lang="en">Who can help me?  (English) ===
 [[:en:Wikipedia:Embassy]]
+* [[User:Leeheonjin|Lee Heon Jin]]
+</small>
+
+=== <span lang="es">¿Quien puede ayudarme? (Español)</span>===
+[[:es:Wikipedia:Embajada]]
 * [[User:Leeheonjin|Lee Heon Jin]]
 </small>
 
