*Empty MediaWiki Message*

--- a/Wikipedia:Embahada.mw
+++ b/Wikipedia:Embahada.mw
@@ -3,7 +3,7 @@ Ini ing Embahada Kapampangan.</span></div></div>
 
 {{Embahada}}
 
-Ing [[Wikipedia:Guestbook and Help for Non-Kapampangan Speakers]] magpalagwa yang posibilidad kareng aliwang tagagamit king aliwang amanu bukud king Amanung Kapampangan.
+Ing [[Wikipedia:Guestbook and Help for Non-Kapampangan Speakers]] magpalagwa yang posibilidad kareng aliwang talagamit king aliwang amanu bukud king Amanung Kapampangan.
 
 
 '''For Non-Kapampangan speakers:'''
