--- a/Pietro_Boselli.mw
+++ b/Pietro_Boselli.mw
@@ -5,7 +5,7 @@
 | birth_name = Pietro Boselli
 | birth_date = [[Negrar]], [[Italya]]
 | birth_place = {{birth date and age|1988|3|12}}
-| occupation = Modelo, talapagturu
+| occupation = modelu, talapagturu
 | height = {{height|m=1.85|precision=0}}
 | hair_color = [[Black]]
 | eye_color = [[Brown]]
