*Empty MediaWiki Message*

--- a/Pietro_Boselli.mw
+++ b/Pietro_Boselli.mw
@@ -16,7 +16,7 @@
 | 
 }}
 
-I '''Pietro Boselli''' (mibait ya king [[Negrar]], [[Italya]]) metung yang modelu ampong talapagturu king [[London]], [[England|Inglatera]].
+I '''Pietro Boselli''' (mibait ya king [[Negrar]], [[Italya]]) metung yang modelu ampong talapagturu king [[London|Londres]], [[England|Inglatera]].
 
 ==Kasusug Kilwal==
 *[http://www.pietroboselli.com/ Official website]
