--- a/U.S._state.mw
+++ b/U.S._state.mw
@@ -1,5 +1,7 @@
 Ing '''U.S. state''' maski nanu yang state kareng limangpulung [[state (country subdivision)|subnational entities]] na ning [[United States]], agiang deng apat a states gagamit lang opisyal a pamansag a "[[Commonwealth (United States)|commonwealth]]".
 
+[[File:Map of USA with state names.svg|700px|lang=pam]]
+
 {| class="wikitable sortable"
 |+ Deng 50 United States ning America
 ! Opisyal State Lagyu
